--- a/dasUberEnduroApplicationen/Manual.html
+++ b/dasUberEnduroApplicationen/Manual.html
@@ -25,7 +25,8 @@
         <div>-m: hh.mm.ss, massstart optional</div>
         
   	<h4>Exempel</h4>
-  	<div> java -jar resultMerge.jar -o resultat.txt -s starttider.txt -f maltider.txt -n namnfil.txt </div>
+  	<div> java -jar resultMerge.jar -o resultat.txt -s starttider.txt -f maltider.txt -n namnfil.txt -t maraton</div>
+  	<div> java -jar resultMerge.jar -o resultat3.txt -m 00.01.37 -f maltider.txt -n namnfil.txt -t varvlopp </div>
 	<h3>How to run</h3>
 	<p>*INSTALLATION DESCRIPTION*</p>
 	<br>
