--- a/dasUberEnduroApplicationen/Manual.html
+++ b/dasUberEnduroApplicationen/Manual.html
@@ -8,7 +8,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body style="background-color: #F280A1">
-  	<h1>Manual Enduro application </h1> 
+  	<h1>Handbuch für Über Enduro Applikationen </h1> 
+  	<h1>By Drachentöter Inc.</h1>
   	<h2>How to Run&Install </h2>
   	unzip release1g6.zip and go into the folder with a terminal.
   	<h3>Subapplications </h3>
@@ -31,5 +32,6 @@
   	<div> java -jar resultMerge.jar -o resultat.txt -s starttider.txt -f maltider.txt -n namnfil.txt -t maraton</div>
   	<div> java -jar resultMerge.jar -o resultat3.txt -m 00.01.37 -f maltider.txt -n namnfil.txt -t varvlopp </div>
 	
+	<img src="https://lh3.googleusercontent.com/-Jv6h28zaNrc/WDSnc24nmcI/AAAAAAAAlyU/6zrF9TUHKqUiSDGpTJdVgbOAmBS3aeKUQCJoC/w800-h800/tumooouououou0.gif" alt="Dovahkiin" height="200" width="400">
   </body>
 </html>
