--- a/dasUberEnduroApplicationen/Manual.html
+++ b/dasUberEnduroApplicationen/Manual.html
@@ -26,6 +26,7 @@
         <div>-f: finish file path, mandatory</div>
         <div>-s: start file path, mandatory if not massstart</div>
         <div>-t=maraton: [maraton, varvlopp], mandatory</div>
+	<div>-l: stipulated time, mandatory for "varvlopp"</div>
         <div>-m: hh.mm.ss, massstart optional</div>
         
   	<h4>Examples</h4>
