--- a/dasUberEnduroApplicationen/mapp_med_shit/resultat.html
+++ b/dasUberEnduroApplicationen/mapp_med_shit/resultat.html
@@ -22,6 +22,7 @@
         <th> JUNIOR</th>
       </tr>
       <tr>
+        <th> Plac</th>
         <th> StartNr</th>
         <th> Namn</th>
         <th> #Varv</th>
@@ -31,15 +32,7 @@
         <th> Mål</th>
       </tr>
       <tr>
-        <th> 3</th>
-        <th> Chris Csson</th>
         <th> 1</th>
-        <th> 09.43.00</th>
-        <th> 09.43.00</th>
-        <th> 03.00.00</th>
-        <th> 12.43.00</th>
-      </tr>
-      <tr>
         <th> 4</th>
         <th> David Dsson</th>
         <th> 1</th>
@@ -49,6 +42,7 @@
         <th> 12.23.00</th>
       </tr>
       <tr>
+        <th> 2</th>
         <th> 5</th>
         <th> Erik Esson</th>
         <th> 1</th>
@@ -58,9 +52,20 @@
         <th> 12.24.00</th>
       </tr>
       <tr>
+        <th> 3</th>
+        <th> 3</th>
+        <th> Chris Csson</th>
+        <th> 1</th>
+        <th> 09.43.00</th>
+        <th> 09.43.00</th>
+        <th> 03.00.00</th>
+        <th> 12.43.00</th>
+      </tr>
+      <tr>
         <th> SENIOR</th>
       </tr>
       <tr>
+        <th> Plac</th>
         <th> StartNr</th>
         <th> Namn</th>
         <th> #Varv</th>
@@ -71,14 +76,6 @@
       </tr>
       <tr>
         <th> 1</th>
-        <th> Anders Asson</th>
-        <th> 1</th>
-        <th> 10.00.00</th>
-        <th> 10.00.00</th>
-        <th> 03.00.00</th>
-        <th> 13.00.00</th>
-      </tr>
-      <tr>
         <th> 2</th>
         <th> Bengt Bsson</th>
         <th> 1</th>
@@ -86,6 +83,16 @@
         <th> 09.21.00</th>
         <th> 03.00.00</th>
         <th> 12.21.00</th>
+      </tr>
+      <tr>
+        <th> 2</th>
+        <th> 1</th>
+        <th> Anders Asson</th>
+        <th> 1</th>
+        <th> 10.00.00</th>
+        <th> 10.00.00</th>
+        <th> 03.00.00</th>
+        <th> 13.00.00</th>
       </tr>
     </table>
   </body>
