--- a/dasUberEnduroApplicationen/Manual.html
+++ b/dasUberEnduroApplicationen/Manual.html
@@ -24,8 +24,8 @@
 	<ul>
   	<li>Flera förare - t.ex ”5 8 7 11”</li>
  	<li>Intervall - t.ex ”1-9”</li>
- 	<li>Klass - t.ex ”Seniorer” (måste skrivas exakt som klassen är skriven i namnfilen)</li>
-	<li>Kombination av de ovannämnda sätten - t.ex ”6 12 15-18 Seniorer”</li>
+ 	<li>Klass - måste inledas med ett @-tecken t.ex ”@Seniorer” (måste skrivas exakt som klassen är skriven i namnfilen)</li>
+	<li>Kombination av de ovannämnda sätten - t.ex ”6 12 15-18 @Seniorer”</li>
 	</ul>
 	<p></p>
 Om man inte kan läsa en förares startnummer på grund av t.ex smutsig nummerplåt så kan man lämna textfältet tomt och registrera tiden ändå. Registreringen syns då till höger i rutan nedan där man har chans att i efterhand skriva in startnumret. Likaså om man skriver någon felaktig input i textfältet så hamnar registreringen till höger där man har möjlighet att korrigera felet. Resultatet av körningen av programmet är en textfil som innehåller alla de registrerade tiderna. Denna fil används sen av resultatprogrammet för att generera resultatfiler.
