--- a/dasUberEnduroApplicationen/Manual.html
+++ b/dasUberEnduroApplicationen/Manual.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body style="background-color: #F280A1">
-  	<h1>Handbuch für Über Enduro Applikationen </h1> 
-  	<h1>By Drachentöter Inc.</h1>
+  	<h1>Handbuch für Über Enduro Applikationen&trade; </h1> 
+  	<h1>By Drachentöter&trade; Inc.</h1>
   	<h2>Installering och körning </h2>
 	Unzippa filen release.zip och placera mappen release på ett lämpligt ställe på datorn.
   	<h3>Delapplikationer </h3>
@@ -68,5 +68,11 @@ När konfigurationsfilen är skapad och korrekt ifylld kan man förslagsvis döp
 	</li>
 	</ul>
 	<img src="https://lh3.googleusercontent.com/-Jv6h28zaNrc/WDSnc24nmcI/AAAAAAAAlyU/6zrF9TUHKqUiSDGpTJdVgbOAmBS3aeKUQCJoC/w800-h800/tumooouououou0.gif" alt="Dovahkiin" height="200" width="400">
+	<img src="http://68.media.tumblr.com/b6514ccc933d9f153a4c198b4ff93ea7/tumblr_mtn83ly7gE1sjro9ko1_500.gif" alt="GoT Dragon" height="200" width="350">
+	<img src="https://media.giphy.com/media/l41YchoA82CryasHS/giphy.gif" alt="Derpy Dragon" height="200" width="200">
+	<img src="https://media1.giphy.com/media/52YhqvPO5l3lS/200.gif#13" alt="Treadmill dragon" height="200" width="200">
+	<img src="https://media4.giphy.com/media/sRCV0hq3TWzde/200.gif#167" alt="Mulan" height="200" width="400">	
+
+
   </body>
 </html>
